Bugfix missalignment of open navigation on md breakpoint

--- a/components/Header.scss
+++ b/components/Header.scss
@@ -138,6 +138,12 @@ $logo-isze-md: 63px;
     padding-left: 89px;
   }
 
+  @include mq-up(md) {
+    padding-top: 150px;
+    padding-bottom: 80px;
+    padding-left: 118px;
+  }
+
   @include mq-up(lg) {
     position: static;
     flex: 0 0 auto;
